syntax = "proto3";

package sharesecret;

import "google/api/annotations.proto";

option go_package = "genproto;proto";

service SecretService {
  rpc CreateSecret (CreateSecretRequest) returns (CreateSecretResponse) {
    option (google.api.http) = {
      post: "/v1/secret"
      body: "*"
    };
  }
  rpc SeeSecret (SeeSecretRequest) returns (SeeSecretResponse) {
    option (google.api.http) = {
      get: "/v1/secret/{id}"
      // Note: if secret require password to see the content client will send "grpc-metadata-password" and we got from context "password"
    };
  }
}

message CreateSecretRequest {
  string content = 1;
  string password = 2; // Optional
}

message CreateSecretResponse {
  string id = 1;
}

message SeeSecretRequest {
  string id = 1;
  string password = 2;
}

message SeeSecretResponse {
  string content = 1;
}
